tests/NormalTests/paczka1/fuzzy1/95992348.err
Error in line 7: PkqwIevmH9 S489 60,0
Error in line 19: UlfoU A387 57,3
Error in line 14: UbD09Y4EE2n A387 45,2
Error in line 27: uZ8UQjF2FMl A22 97,8
Error in line 32: Eq8Kz0p S489 23,4
Error in line 28: PkqwIevmH9 A387 180,4
